--- a/templates/directives_tpl/wfm-dir.html
+++ b/templates/directives_tpl/wfm-dir.html
@@ -1,5 +1,5 @@
 <div>
-	<table class="table table-bordered table-hover">
+	<table class="table table-bordered">
 		<thead>
 			<tr>
 				<th>ID</th>
@@ -9,7 +9,7 @@
 			</tr>
 		</thead>
 		<tbody>
-			<tr ng-repeat="book in books">
+			<tr ng-repeat="book in books" ng-click="clickTr($event)">
 				<td>{{$index + 1}}</td>
 				<td>{{book.title}}</td>
 				<td>{{book.year}}</td>
@@ -17,5 +17,4 @@
 			</tr>
 		</tbody>
 	</table>
-	<p>{{test}}</p>
 </div>
