--- a/templates/directives_tpl/wfm-dir.html
+++ b/templates/directives_tpl/wfm-dir.html
@@ -13,7 +13,7 @@
 				<td>{{$index + 1}}</td>
 				<td>{{book.title | myFilter : 111 : 222}}</td>
 				<td>{{book.year}}</td>
-				<td>{{book.price}}</td>
+				<!-- <td>{{book.price}}</td> -->
 				<td>{{book.price | currency : '$ ' : 0}}</td>
 				<!-- <td>{{book.price | number : 2}} $</td> -->
 			</tr>
