--- a/templates/books.html
+++ b/templates/books.html
@@ -1,4 +1,5 @@
 <h1>Список книг</h1>
+<p><input type="text" name="search" class="form-control" ng-model="search"></p>
 <table class="table table-bordered">
 	<thead>
 		<tr>
@@ -10,7 +11,7 @@
 		</tr>
 	</thead>
 	<tbody>
-		<tr ng-repeat="book in books" ng-click="clickTr($event)">
+		<tr ng-repeat="book in books | filter: search" ng-click="clickTr($event)" class="repeat-animation">
 			<td>{{$index + 1}}</td>
 			<td><a href="#!/book/{{book.id}}">{{book.title | myFilter : 111 : 222}}</a></td>
 			<td>{{book.author}}</td>
